<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="topVM"
            type="jp.mirable.busller.viewmodel.TopViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:onClick="@{() -> topVM.testOnClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{topVM.formatDest(false, topVM.forSchool, false)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/destinationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/dest_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/destination"
                    app:layout_constraintStart_toEndOf="@+id/destination" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nextTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/next_bus"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/nextTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/nextTime" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nextTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@{topVM.formatTime(topVM.nextData.hour, topVM.nextData.minute)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toEndOf="@+id/nextTimeLabel"
                    app:layout_constraintTop_toBottomOf="@+id/destination" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/depTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/dep_time"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/nextTimeLabel"
                    app:layout_constraintTop_toBottomOf="@+id/nextTimeLabel" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/depTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@{topVM.formatTime(topVM.leftSec)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/depTimeLabel" />

                <TextView
                    android:id="@+id/debugText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timeTableRV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingBottom="72dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>